--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,10 +82,10 @@ h1 {
     border-top: medium solid #dddddd;
   }
 
-img {
+#profilePic {
+    margin-top: 20px;
     height: 200px;
     width: 200px;
-    margin-top: 20px;
 }
 
 .verticalLine {
@@ -102,11 +102,112 @@ li a, .verticalLine {
 
 img {
     float: left;
-    padding: 10px;
 }
 
 span {
     overflow:hidden;
 }
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: #4aaaa5;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #4aaaa5;
+}
+
+#contactBox {
+    width: 960px;
+    border-style: groove;
+    border-color: #dddddd;
+    height: 960px;
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 18%;
+    margin-bottom: 20%;
+    background-color: #ffffff;
+    padding: 10px;
+}
+
+form {
+    margin-top: 10px;
+}
+
+#portfolioBox {
+    width: 960px;
+    border-style: groove;
+    border-color: #dddddd;
+    height: 960px;
+    margin-top: 20%;
+    margin-left: 18%;
+    margin-bottom: 20%;
+    background-color: #ffffff;
+    padding: 10px;
+}
+
+.imgContainer {
+    max-width: 75%;
+    margin-top: 20px;
+    height: 720px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+
+
+.image-box {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    
+}
+
+.textBoxOne {
+    position: absolute;
+    background-color: #4aaaa5;
+    width: 100%; 
+    height: 36px; 
+    top: 66%;
+    left: 0;
+    right: 0;
+    bottom: 34%;
+    z-index: 10;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 30px;
+    color: #ffffff;
+    margin: 10px;
+}
+
+.imagur {
+    position: absolute;
+    height: 200px;
+    width: 200px;
+    margin: 10px;
+
+}
+
+
+
+
+
 
 
